# llm-benchmarks

./: .env.example  .gitignore  README.md  app.py  evaluation_results.json  prompt.json  pyproject.toml  report.html  requirements.txt  result.json  run_local_benchmark.py
llm_benchmarker/: __init__.py  runner.py
llm_benchmarker/core/: aggregator.py  evaluator.py  executor.py  prompt_loader.py  report_template.html  reporter.py
llm_benchmarker/utils/: env_loader.py
lomen_benchmark_output/: benchmark_report.html  detailed_results.json  summary.json
src/api/: main.py
src/core/: aggregator.py  evaluator.py  executor.py  prompt_loader.py  reporter.py
src/utils/: env_loader.py
